--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,44 @@
 buildscript {
+  ext {
+      springBootVersion = '1.3.2.RELEASE'
+  }
   repositories {
     mavenCentral()
   }
   dependencies {
-    classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE")
+    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
   }
-}
-
-apply plugin: "java"
-apply plugin: "spring-boot"
-apply plugin: "eclipse"
-
-eclipse {
-  classpath {
-    containers "org.springsource.ide.eclipse.gradle.classpathcontainer"
-  }
-}
-
-jar {
-  baseName = "timber-forest"
-  version =  "0.0.1-SNAPSHOT"
 }
 
 repositories {
   mavenCentral()
 }
 
+apply plugin: "java"
+apply plugin: "spring-boot"
+apply plugin: "eclipse"
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+jar {
+  baseName = "timber-forest"
+  version =  "0.0.1-SNAPSHOT"
+}
+
+eclipse {
+  classpath {
+    containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+    containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+  }
+}
+
 dependencies {
   compile "org.springframework.boot:spring-boot-starter-web"
   compile "org.projectlombok:lombok:1.16.6"
   testCompile "org.springframework.boot:spring-boot-starter-test"
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = '2.8'
 }
