IntelliJ 関連のファイルを整理。2016.1で動作確認

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,7 @@ gradle-app.setting
 /timber/
 /.idea/libraries/*
 /.idea/workspace.xml
-/.idea/uiDesigner.xml
+#/.idea/uiDesigner.xml
+*.iml
+*.iws
+
