--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 apply plugin: "java"
 apply plugin: "spring-boot"
 apply plugin: "eclipse"
+apply plugin: "idea"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
