--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
   }
   dependencies {
     classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    classpath("org.springframework:springloaded:1.2.5.RELEASE")
   }
 }
 
@@ -16,7 +17,6 @@ repositories {
 
 apply plugin: "java"
 apply plugin: "spring-boot"
-apply plugin: "eclipse"
 apply plugin: "idea"
 
 sourceCompatibility = 1.8
@@ -27,10 +27,10 @@ jar {
   version =  "0.0.1-SNAPSHOT"
 }
 
-eclipse {
-  classpath {
-    containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-    containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+idea {
+  module {
+    inheritOutputDirs = false
+    outputDir = file("$buildDir/classes/main/")
   }
 }
 
