--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
   ext {
-      springBootVersion = '1.3.2.RELEASE'
+    kotlinVersion = '1.0.1-2'
+    springBootVersion = '1.3.3.RELEASE'
   }
   repositories {
     mavenCentral()
   }
   dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     classpath("org.springframework:springloaded:1.2.5.RELEASE")
   }
@@ -16,8 +18,8 @@ repositories {
 }
 
 apply plugin: "java"
+apply plugin: "kotlin"
 apply plugin: "spring-boot"
-apply plugin: "idea"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -27,19 +29,12 @@ jar {
   version =  "0.0.1-SNAPSHOT"
 }
 
-idea {
-  module {
-    inheritOutputDirs = false
-    outputDir = file("$buildDir/classes/main/")
-  }
-}
-
 dependencies {
-  compile "org.springframework.boot:spring-boot-starter-web"
-  compile "org.projectlombok:lombok:1.16.6"
-  testCompile "org.springframework.boot:spring-boot-starter-test"
+  compile("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion")
+  compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+  testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.8'
+  gradleVersion = '2.12'
 }
