--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "node server.js",
+    "start": "node src/main/client-dev-server/server.js",
     "watch": "babel -w src -d dist"
   }
 }
