--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "install": "^0.8.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.12.0",
+    "material-ui": "^0.15.0",
     "normalizr": "^2.1.0",
     "npm": "^3.9.2",
     "react": "^15.1.0",
@@ -24,6 +25,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
