--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.17.0",
     "redux-devtools": "^3.3.1",
+    "redux-devtools-chart-monitor": "^1.4.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "webpack": "^1.13.1",
