--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.5.0",
     "concurrently": "^2.1.0",
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.17.0",
@@ -49,7 +50,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack --progress",
     "start": "node src/main/client-dev-server/server.js",
     "watch": "babel -w src -d dist"
   }
