--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress",
+    "package": "NODE_ENV=production webpack --release --progress",
     "start": "node src/main/client-dev-server/server.js",
     "watch": "babel -w src -d dist"
   }
