--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -41,6 +42,7 @@
     "concurrently": "^2.1.0",
     "express": "^4.13.4",
     "html-webpack-plugin": "^2.17.0",
+    "react-transform-hmr": "^1.0.4",
     "redux-devtools": "^3.3.1",
     "redux-devtools-chart-monitor": "^1.4.1",
     "redux-devtools-dock-monitor": "^1.1.1",
@@ -51,9 +53,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress",
+    "build": "NODE_ENV=development webpack --progress",
     "package": "NODE_ENV=production webpack --release --progress",
-    "start": "node src/main/client-dev-server/server.js",
+    "start": "NODE_ENV=development node src/main/client-dev-server/server.js",
     "watch": "babel -w src -d dist"
   }
 }
