--- a/package.json
+++ b/package.json
@@ -13,13 +13,7 @@
   "homepage": "",
   "dependencies": {
     "babel-polyfill": "^6.9.0",
-    "humps": "^1.1.0",
-    "install": "^0.8.1",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.12.0",
     "material-ui": "^0.15.0",
-    "normalizr": "^2.1.0",
-    "npm": "^3.9.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -27,8 +21,7 @@
     "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-logger": "^2.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -39,8 +32,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-1": "^6.5.0",
-    "concurrently": "^2.1.0",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "html-webpack-plugin": "^2.17.0",
     "react-transform-hmr": "^1.0.4",
     "redux-devtools": "^3.3.1",
