--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-1": "^6.5.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.17.0",
+    "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.4",
     "redux-devtools": "^3.3.1",
     "redux-devtools-chart-monitor": "^1.4.1",
