--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
-    "redux-logger": "^2.6.1"
+    "redux-logger": "^2.6.1",
+    "redux-saga": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
