--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.17.0",
+    "http-proxy-middleware": "^0.17.0",
     "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.4",
     "redux-devtools": "^3.3.1",
