--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ targetCompatibility = 1.8
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
   compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+  compile "org.springframework.boot:spring-boot-starter-security:${springBootVersion}"
   compile "org.codehaus.janino:janino:3.0.0"
   testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
