--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
 
   topbeat:
     restart: always
-    image: cxpqwvtj/fluentd-elasticsearch:latest
+    image: cxpqwvtj/topbeat:latest
     depends_on:
       - elasticsearch
     pid: "host"
