--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
         "--nolazy"
       ],
       "env": {
-        "NODE_ENV": "development"
+        "NODE_ENV": "development",
+        "HOT_DEPLOY": "true"
       },
       "externalConsole": false,
       "sourceMaps": false,
