環境変数次第でexpressサーバでモックのjson(現状は空オブジェクト)を返せるように変更

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
       ],
       "env": {
         "NODE_ENV": "development",
-        "HOT_DEPLOY": "true"
+        "HOT_DEPLOY": "true",
+        "SERVER_MOCK": "true"
       },
       "externalConsole": false,
       "sourceMaps": false,
