--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
   ext {
-    kotlinVersion = '1.0.1-2'
-    springBootVersion = '1.3.3.RELEASE'
+    kotlinVersion = '1.0.3'
+    springBootVersion = '1.4.1.RELEASE'
   }
   repositories {
     mavenCentral()
@@ -9,7 +9,7 @@ buildscript {
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    classpath "org.springframework:springloaded:1.2.6.RELEASE"
+    classpath "org.springframework:springloaded:1.2.5.RELEASE"
   }
 }
 
